--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
 <head>
 	<meta charset="UTF-8">
 	<title>ahmet</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<link rel="stylesheet" href="node_modules\flag-icon-css\css\flag-icon.min.css">
-	<link rel="stylesheet" href="app\main.css">
 
+	<!-- CSS Files -->
+
+	<link rel="stylesheet" href="node_modules\mdbootstrap\css\bootstrap.css">
+	<link rel="stylesheet" href="node_modules\mdbootstrap\css\mdb.css">
+	<link rel="stylesheet" href="node_modules\flag-icon-css\css\flag-icon.min.css">
+	<link rel="stylesheet" href="app\css\main.css">
+	<link rel="stylesheet" href="app\css\font-awesome.min.css">
+
+	<!-- JS Files -->
 	<script>
 		if (typeof module === 'object') {
 			window.module = module;
@@ -22,42 +28,111 @@
 		if (window.module) module = window.module;
 	</script>
 
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	<script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
+	<script src="https://npmcdn.com/bootstrap@4.0.0-alpha.5/dist/js/bootstrap.min.js"></script>
+	<script src="node_modules\mdbootstrap\js\bootstrap.js"></script>
+	<script src="node_modules\mdbootstrap\js\mdb.js"></script>
 
 	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
 
-<body style="-webkit-app-region: drag">
+<body>
 	<button type="button" class="close">&times;</button>
 
 	<div class="row">
-		<div class="header col-md-12">
-			<h3 id="today"></h3>
-		</div>
 		<div class="container">
+			<div class="page-header">
+		    	<h2 id="today"></h2>
+	  		</div>
 			<div class="col-md-12">
-				<h3><span class="flag-icon flag-icon-us"></span> 1 ABD Doları</h3>
-				<h3>
-					<span class="flag-icon flag-icon-tr"></span> <span id="ustl"></span> Türk Lirası
-				</h3>
+				<div class="col-xs-6">
+					<div class="card card-primary text-xs-center">
+						<div class="card-block">
+							<h4 class="card-title white-text">USD / TL</h4>
+							<h2 class="card-text white-text" id="ustl"></h2>
+						</div>
+					</div>
+				</div>
+				<div class="col-xs-6">
+					<div class="card card-primary text-xs-center">
+						<div class="card-block">
+							<h4 class="card-title white-text">EURO / TL</h4>
+							<h2 class="card-text white-text" id="eutl"></p>
+						</div>
+					</div>
+				</div>
 			</div>
-			<div class="col-md-12 divider"></div>
 			<div class="col-md-12">
-				<h3><span class="flag-icon flag-icon-eu"></span> 1 Euro</h3>
-				<h3>
-					<span class="flag-icon flag-icon-tr"></span> <span id="eutl"></span> Türk Lirası
-				</h3>
+				<div class="col-xs-6">
+					<div class="md-form input-group">
+						<i class="fa fa-try prefix p-t-10"></i>
+					    <input id="toDollar" type="number" class="form-control" placeholder="Türk Lirası">
+					    <span class="input-group-addon btn-default white-text" id="dollarResult"><span></span> USD ($)</span>
+					</div>
+				</div>
+				<div class="col-xs-6">
+					<div class="md-form input-group">
+						<i class="fa fa-try prefix p-t-10"></i>
+					    <input id="toEuro" type="number" class="form-control" placeholder="Türk Lirası">
+					    <span class="input-group-addon btn-default white-text" id="euroResult"><span></span> EUR (€)</span>
+					</div>
+				</div>
 			</div>
-
-			<!--
 			<div class="col-md-12">
-				<h3>Haberler</h3>
-				<ul class="news"></ul>
+				<div class="col-xs-6">
+					<div class="md-form input-group">
+						<i class="fa fa-usd prefix p-t-10"></i>
+					    <input id="dollarToLira" type="number" class="form-control" placeholder="Amerikan Doları">
+					    <span class="input-group-addon btn-default white-text" id="dollarToLiraResult"><span></span> TL (₺)</span>
+					</div>
+				</div>
+				<div class="col-xs-6">
+					<div class="md-form input-group">
+						<i class="fa fa-eur prefix p-t-10"></i>
+					    <input id="euroToLira" type="number" class="form-control" placeholder="Euro">
+					    <span class="input-group-addon btn-default white-text" id="euroToLiraResult"><span></span> TL (₺)</span>
+					</div>
+				</div>
 			</div>
-			-->
 		</div>
 	</div>
 
+	<!--Footer-->
+	<footer class="page-footer blue center-on-small-only">
+
+	    <!--Footer Links-->
+	    <!--<div class="container-fluid">
+	        <div class="row">
+
+	            <div class="col-md-6">
+	                <h5 class="title">Footer Content</h5>
+	                <p>Here you can use rows and columns here to organize your footer content.</p>
+	            </div>
+
+	            <div class="col-md-6">
+	                <h5 class="title">Links</h5>
+	                <ul>
+	                    <li><a href="#!">Link 1</a></li>
+	                    <li><a href="#!">Link 2</a></li>
+	                    <li><a href="#!">Link 3</a></li>
+	                    <li><a href="#!">Link 4</a></li>
+	                </ul>
+	            </div>
+	        </div>
+	    </div> -->
+	    <!--/.Footer Links-->
+
+	    <!--Copyright-->
+	    <div class="footer-copyright">
+	        <div class="container-fluid">
+	            © 2017 <a href="http://ahakanergun.com">Ahmet Hakan Ergün</a>
+	        </div>
+	    </div>
+	    <!--/.Copyright-->
+
+	</footer>
+	<!--/.Footer-->
+
 </body>
-<script src="app\app.js"></script>
+<script src="app\js\app.js"></script>
 </html>
