--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 
 	<!-- CSS Files -->
 
-	<link rel="stylesheet" href="node_modules\mdbootstrap\css\bootstrap.css">
-	<link rel="stylesheet" href="node_modules\mdbootstrap\css\mdb.css">
-	<link rel="stylesheet" href="node_modules\flag-icon-css\css\flag-icon.min.css">
-	<link rel="stylesheet" href="app\css\main.css">
-	<link rel="stylesheet" href="app\css\font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="node_modules/mdbootstrap/css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="node_modules/mdbootstrap/css/mdb.css">
+	<link rel="stylesheet" type="text/css" href="node_modules/flag-icon-css/css/flag-icon.min.css">
+	<link rel="stylesheet" type="text/css" href="app/css/main.css">
+	<link rel="stylesheet" type="text/css" href="app/css/font-awesome.min.css">
 
 	<!-- JS Files -->
 	<script>
@@ -30,8 +30,8 @@
 
 	<script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
 	<script src="https://npmcdn.com/bootstrap@4.0.0-alpha.5/dist/js/bootstrap.min.js"></script>
-	<script src="node_modules\mdbootstrap\js\bootstrap.js"></script>
-	<script src="node_modules\mdbootstrap\js\mdb.js"></script>
+	<script src="node_modules/mdbootstrap/js/bootstrap.js"></script>
+	<script src="node_modules/mdbootstrap/js/mdb.js"></script>
 
 	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
