--- a/index.html
+++ b/index.html
@@ -24,13 +24,19 @@
 	    	<div class="row centered">
 	    		<div class="col-lg-12">
 					<h1><b>exchange-tr</b></h1>
-					<h3>Döviz kuru dönüştürücü</h3>
+					<h3>Döviz Kuru Dönüştürücü</h3>
 					<br>
 	    		</div>
-	    		
+
+          <div class="col-lg-12">
+            <button type="button" class="btn btn-primary btn-lg">Download</button>
+            <button type="button" class="btn btn-default btn-lg">GitHub</button>
+	    		</div>
+          <br>
+
 	    		<div class="col-lg-3">
-	    			<h5>Amazing Results</h5>
-	    			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+	    			<h5>Anında Dönüşüm</h5>
+	    			<p>Dolar, Euro ve Türk Lirası arasında o anki kur üzerinden anında dönüşüm hesabı yapın.</p>
 	    			<img class="hidden-xs hidden-sm hidden-md" src="assets/img/arrow1.png">
 	    		</div>
 	    		<div class="col-lg-6">
@@ -39,8 +45,8 @@
 	    		<div class="col-lg-3">
 	    			<br>
 	    			<img class="hidden-xs hidden-sm hidden-md" src="assets/img/arrow2.png">
-	    			<h5>Awesome Design</h5>
-	    			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+	    			<h5>Anlık Kurlar</h5>
+	    			<p>Dolar ve Euro'nun anlık değişimine masaüstünüzden bir tıkla ulaşın.</p>
 	    		</div>
 	    	</div>
 	    </div> <!--/ .container -->
