--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="exchange-tr">
     <meta name="author" content="Ahmet Hakan Ergün">
+    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
     <link rel="shortcut icon" href="assets/ico/favicon.png">
 
     <title>exchange-tr</title>
