beta bilgisi eklendi

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	    		</div>
 
           <div class="col-lg-12">
-            <a type="button" class="btn btn-primary btn-lg" href="http://ahmethakanergun.com/downloads/exchange.rar">Download (Windows 64bit)</a>
+            <a type="button" class="btn btn-primary btn-lg" href="http://ahmethakanergun.com/downloads/exchange.rar">Download - Beta(Windows 64bit)</a>
             <a type="button" class="btn btn-default btn-lg" href="https://github.com/ahakanergun/exchange-tr" target="_blank">GitHub</a>
 	    		</div>
           <br>
