--- a/dev/index.html
+++ b/dev/index.html
@@ -125,7 +125,7 @@
 	    <!--Copyright-->
 	    <div class="footer-copyright">
 	        <div class="container-fluid">
-	            © 2017 <a href="http://ahakanergun.com">Ahmet Hakan Ergün</a>
+	            © 2017 <a href="http://ahmethakanergun.com/">Ahmet Hakan Ergün</a>
 	        </div>
 	    </div>
 	    <!--/.Copyright-->
