--- a/dev/index.html
+++ b/dev/index.html
@@ -6,9 +6,14 @@
 	<title>exchange-tr</title>
 
 	<!-- CSS Files -->
+	<link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap-flex.css">
+	<link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap-grid.css">
+	<link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap-reboot.css">
 
-	<link rel="stylesheet" type="text/css" href="node_modules/mdbootstrap/css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="node_modules/mdbootstrap/css/mdb.css">
+
+	<!-- <link rel="stylesheet" type="text/css" href="node_modules/mdbootstrap/css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="node_modules/mdbootstrap/css/mdb.css"> -->
 	<link rel="stylesheet" type="text/css" href="node_modules/flag-icon-css/css/flag-icon.min.css">
 	<link rel="stylesheet" type="text/css" href="app/css/main.css">
 	<link rel="stylesheet" type="text/css" href="app/css/font-awesome.min.css">
@@ -21,6 +26,7 @@
 		}
 	</script>
 
+
 	<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.1/moment-with-locales.min.js"></script>
 
@@ -28,10 +34,10 @@
 		if (window.module) module = window.module;
 	</script>
 
+	<!--<script src="node_modules/mdbootstrap/js/bootstrap.js"></script>
 	<script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
 	<script src="https://npmcdn.com/bootstrap@4.0.0-alpha.5/dist/js/bootstrap.min.js"></script>
-	<script src="node_modules/mdbootstrap/js/bootstrap.js"></script>
-	<script src="node_modules/mdbootstrap/js/mdb.js"></script>
+	<script src="node_modules/mdbootstrap/js/mdb.js"></script> -->
 
 	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
@@ -81,80 +87,52 @@
 				</div>
 			</div>
 
-			<div class="col-md-12 dollarConverter">
-
-				<div class="col-xs-6">
-					<h4>ALIŞ: <span id="usSell"></span></h4>
-					<div class="md-form input-group">
-						<i class="fa fa-try prefix p-t-10"></i>
-					    <input id="toDollarSell" type="number" class="form-control" placeholder="Türk Lirası">
-					    <span class="input-group-addon btn-default white-text" id="dollarSellResult"><span></span> USD ($)</span>
+			<div class="col-md-12">
+				<div class="col-xs-5">
+					<div class="form-inline input-group">
+						<span id="firstCurrencyIcon" class="input-group-addon btn-default white-text"><i class="fa fa-try"></i></span>
+					    <input id="toDollarSell" type="number" class="form-control" placeholder="">
+						<select id="firstCurrency" class="currencySelect">
+						  <option value="0">Türk Lirası</option>
+						  <option value="1">Dolar</option>
+						  <option value="2">Euro</option>
+						</select>
 					</div>
 				</div>
-				<div class="col-xs-6">
-					<h4>SATIŞ: <span id="usBuy"></span></h4>
-					<div class="md-form input-group">
-						<i class="fa fa-try prefix p-t-10"></i>
-					    <input id="toDollarBuy" type="number" class="form-control" placeholder="Türk Lirası">
-					    <span class="input-group-addon btn-default white-text" id="dollarBuyResult"><span></span> USD (€)</span>
-					</div>
+				<div class="col-xs-2 exchange-button">
+					<i class="fa fa-exchange fa-2x"></i>
 				</div>
-				<div class="col-xs-6">
-					<div class="md-form input-group">
-						<i class="fa fa-usd prefix p-t-10"></i>
-					    <input id="dollarToLiraSell" type="number" class="form-control" placeholder="Amerikan Doları">
-					    <span class="input-group-addon btn-default white-text" id="dollarToLiraSellResult"><span></span> TL (₺)</span>
-					</div>
-				</div>
-				<div class="col-xs-6">
-					<div class="md-form input-group">
-						<i class="fa fa-usd prefix p-t-10"></i>
-					    <input id="dollarToLiraBuy" type="number" class="form-control" placeholder="Amerikan Doları">
-					    <span class="input-group-addon btn-default white-text" id="dollarToLiraBuyResult"><span></span> TL (₺)</span>
+				<div class="col-xs-5">
+					<div class="form-inline input-group">
+						<span id="secondCurrencyIcon" class="input-group-addon btn-default white-text"><i class="fa fa-usd"></i></span>
+					    <input id="toDollarBuy" type="number" class="form-control" placeholder="">
+						<select id="secondCurrency" class="currencySelect">
+						  <option value="0">Türk Lirası</option>
+						  <option value="1">Dolar</option>
+						  <option value="2">Euro</option>
+						</select>
 					</div>
 				</div>
 			</div>
 
-
+			<div class="col-md-12 dollarConverter">
+				<h4>ALIŞ: <span id="usSell"></span></h4>
+				<h4>SATIŞ: <span id="usBuy"></span></h4>
+				<span class="input-group-addon btn-default white-text" id="dollarSellResult"></span>
+				<span class="input-group-addon btn-default white-text" id="dollarBuyResult"></span>
+			</div>
 
 		</div>
 	</div>
 
-	<!--Footer-->
-	<footer class="navbar-fixed-bottom page-footer blue-grey center-on-small-only">
 
-	    <!--Footer Links-->
-	    <!--<div class="container-fluid">
-	        <div class="row">
+	<footer class="footer">
+      <div class="container">
+        <span class="text-muted">© 2017 <a href="http://ahmethakanergun.com/" target="_blank">Ahmet Hakan Ergün</a></span>
+      </div>
+    </footer>
 
-	            <div class="col-md-6">
-	                <h5 class="title">Footer Content</h5>
-	                <p>Here you can use rows and columns here to organize your footer content.</p>
-	            </div>
 
-	            <div class="col-md-6">
-	                <h5 class="title">Links</h5>
-	                <ul>
-	                    <li><a href="#!">Link 1</a></li>
-	                    <li><a href="#!">Link 2</a></li>
-	                    <li><a href="#!">Link 3</a></li>
-	                    <li><a href="#!">Link 4</a></li>
-	                </ul>
-	            </div>
-	        </div>
-	    </div> -->
-	    <!--/.Footer Links-->
-
-	    <!--Copyright-->
-	    <div class="footer-copyright">
-	        <div class="container-fluid">
-	            <small>© 2017 <a href="http://ahmethakanergun.com/" target="_blank">Ahmet Hakan Ergün</a></small>
-	        </div>
-	    </div>
-	    <!--/.Copyright-->
-
-	</footer>
-	<!--/.Footer-->
 
 </body>
 <script src="app\js\app.js"></script>
