--- a/dev/index.html
+++ b/dev/index.html
@@ -6,14 +6,14 @@
 	<title>exchange-tr</title>
 
 	<!-- CSS Files -->
-	<link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap.css">
+	<!--<link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap-flex.css">
 	<link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap-grid.css">
-	<link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap-reboot.css">
+	<link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap-reboot.css">-->
 
 
-	<!-- <link rel="stylesheet" type="text/css" href="node_modules/mdbootstrap/css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="node_modules/mdbootstrap/css/mdb.css"> -->
+	<link rel="stylesheet" type="text/css" href="node_modules/mdbootstrap/css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="node_modules/mdbootstrap/css/mdb.css">
 	<link rel="stylesheet" type="text/css" href="node_modules/flag-icon-css/css/flag-icon.min.css">
 	<link rel="stylesheet" type="text/css" href="app/css/main.css">
 	<link rel="stylesheet" type="text/css" href="app/css/font-awesome.min.css">
@@ -34,10 +34,10 @@
 		if (window.module) module = window.module;
 	</script>
 
-	<!--<script src="node_modules/mdbootstrap/js/bootstrap.js"></script>
+	<script src="node_modules/mdbootstrap/js/bootstrap.js"></script>
 	<script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
 	<script src="https://npmcdn.com/bootstrap@4.0.0-alpha.5/dist/js/bootstrap.min.js"></script>
-	<script src="node_modules/mdbootstrap/js/mdb.js"></script> -->
+	<script src="node_modules/mdbootstrap/js/mdb.js"></script>
 
 	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
@@ -89,14 +89,9 @@
 
 			<div class="col-md-12">
 				<div class="col-xs-5">
-					<div class="form-inline input-group">
-						<span id="firstCurrencyIcon" class="input-group-addon btn-default white-text"><i class="fa fa-try"></i></span>
+					<div class="input-group">
 					    <input id="toDollarSell" type="number" class="form-control" placeholder="">
-						<select id="firstCurrency" class="currencySelect">
-						  <option value="0">Türk Lirası</option>
-						  <option value="1">Dolar</option>
-						  <option value="2">Euro</option>
-						</select>
+						<span id="firstCurrencyIcon" class="input-group-addon btn-default white-text"><i class="fa fa-try"></i></span>
 					</div>
 				</div>
 				<div class="col-xs-2 exchange-button">
@@ -104,13 +99,8 @@
 				</div>
 				<div class="col-xs-5">
 					<div class="form-inline input-group">
-						<span id="secondCurrencyIcon" class="input-group-addon btn-default white-text"><i class="fa fa-usd"></i></span>
-					    <input id="toDollarBuy" type="number" class="form-control" placeholder="">
-						<select id="secondCurrency" class="currencySelect">
-						  <option value="0">Türk Lirası</option>
-						  <option value="1">Dolar</option>
-						  <option value="2">Euro</option>
-						</select>
+						<input id="toDollarSell" type="number" class="form-control" placeholder="">
+						<span id="firstCurrencyIcon" class="input-group-addon btn-default white-text"><i class="fa fa-try"></i></span>
 					</div>
 				</div>
 			</div>
