kullanılmayan alanlar kapatıldı.

--- a/dev/index.html
+++ b/dev/index.html
@@ -87,7 +87,7 @@
 				</div>
 			</div>
 
-			<div class="col-md-12">
+			<!--<div class="col-md-12">
 				<div class="col-xs-5">
 					<div class="input-group">
 					    <input id="toDollarSell" type="number" class="form-control" placeholder="">
@@ -100,7 +100,7 @@
 				<div class="col-xs-5">
 					<div class="form-inline input-group">
 						<input id="toDollarSell" type="number" class="form-control" placeholder="">
-						<span id="firstCurrencyIcon" class="input-group-addon btn-default white-text"><i class="fa fa-try"></i></span>
+						<span id="secondCurrencyIcon" class="input-group-addon btn-default white-text"><i class="fa fa-usd"></i></span>
 					</div>
 				</div>
 			</div>
@@ -110,7 +110,7 @@
 				<h4>SATIŞ: <span id="usBuy"></span></h4>
 				<span class="input-group-addon btn-default white-text" id="dollarSellResult"></span>
 				<span class="input-group-addon btn-default white-text" id="dollarBuyResult"></span>
-			</div>
+			</div>-->
 
 		</div>
 	</div>
